# bookmark-data

./: Cargo.toml
examples/: size.rs  summary.rs
src/: data.rs  file.rs  lib.rs
src/file/: bookmark.rs  category.rs
src/file/category/: identifier.rs
